deployments/pathweb/workloads/media-services/lidarr/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: lidarr
  namespace: media-services
  labels:
    app.kubernetes.io/name: lidarr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: lidarr
  serviceName: lidarr-headless
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lidarr
    spec:
      nodeSelector:
        node-group: baldric
      containers:
      - name: lidarr
        image: linuxserver/lidarr:latest
        ports:
        - containerPort: 8686
          name: http
        startupProbe:
          httpGet:
            path: /
            port: 8686
          periodSeconds: 3
          failureThreshold: 20
        livenessProbe:
          httpGet:
            path: /
            port: 8686
          periodSeconds: 60
        volumeMounts:
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
        - name: empty
          mountPath: /media
        - name: media
          mountPath: /media/Music
          subPath: Music
        resources:
          requests:
            cpu: "100m"
            memory: "200Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
      volumes:
      - name: downloads
        persistentVolumeClaim:
          claimName: okinawa-downloads-smb
      - name: media
        persistentVolumeClaim:
          claimName: okinawa-media-smb
      - name: empty
        emptyDir: {}
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
